--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
     <li>Hausa</li>
  </ul>
  <hr noshade="4">
- <a href="Contact-me.html">contact-me</a>
+ <a href="contact-me.html">contact-me</a>
 </body>
 </html>
